--- a/style.css
+++ b/style.css
@@ -205,6 +205,14 @@ footer{
 
 @media screen and (max-width: 480px){
   
+  .intro .title{
+    font-size: 16px;
+  }
+  
+  .intro .description{
+    font-size: 19px;
+  }
+  
   .paralax{
     height: 700px;
   }
